[package]
name = "cargo-tarball"
version = "0.0.1"
description = "A cargo subcommand for bundling prebuilt binaries."
authors = ["Ed Page <eopage@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/cargo-tarball.git"
homepage = "https://github.com/crate-ci/cargo-tarball"
documentation = "http://docs.rs/cargo-tarball/"
readme = "README.md"
categories = ["development-tools::build-utils"]
keywords = ["cargo", "release", "package"]

[features]
default = ["zip", "tar", "tgz", "toml", "json", "yaml"]
tgz = ["tar", "flate2"]
json = ["serde_json"]
yaml = []

[dependencies]
failure = "0.1.3"
log = "0.4"
serde = "1.0"
stager = "0.3.4"
globwalk = "0.9.1"
tempfile = "3.0"

liquid = "0.26.11"
cargo_metadata = "0.6"

env_logger = "0.11.8"
exitcode = "1.1"
clap = "4.5.46"
structopt = "0.3.26"

zip = { version = "4.5.0", default-features = false, features = ["deflate"], optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"], optional = true }

serde_json = { version = "1.0", optional = true }
# Not optional for the sake of `--dump`
serde_yaml = "0.9.34"
toml = { version = "0.9.5", optional = true }

[build-dependencies]
clap = "4.5.46"
structopt = "0.3.26"
